Resolvido erro na autenticação Faltando apenas alguém ajustes e permissoes

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,2 +1,8 @@
 NotBlank.java.lang.String = Campo Obrigatório
 NotEmpty.java.lang.Integer = Campo Obrigatório
+NotEmpty=This field is required.
+Size.userForm.username=Please use between 4 and 32 characters.
+Duplicate.userForm.username=Someone already has that username.
+Size.userForm.password=Try one with at least 4 characters.
+Diff.userForm.passwordConfirm=As senha são diferentes.
+NotExist.userForm.username=User not exist
